--- a/templates/home/election.html.twig
+++ b/templates/home/election.html.twig
@@ -6,9 +6,10 @@
         <div class="card-group" id="cardGroup">
             {% for data in datas %}
                 <div class="card">
-                    <img src="{{ absolute_url(asset('upload/famille/' ~ data.media)) }}" class="card-img-top" alt="..." id="image">
+                    <img src="{{ absolute_url(asset('upload/candidat/' ~ data.media)) }}" class="card-img-top" alt="..." id="image">
                     <div class="card-body">
                         <h5 class="card-title" id="nomCouple">{{ data.nom }}</h5>
+                        <div class=""><span class="badge bg-primary">{{ data.commune }}</span></div>
                     </div>
                     <div class="card-footer d-grid gap-2" id="boutons">
                         <input onclick="submit()" type="radio" class="btn-check" name="_couple" id="option{{ data.id }}" value="{{ data.id }}" autocomplete="off">
