--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -44,7 +44,7 @@
                                     Présentiel
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Résultats</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_backend_election') }}" target="_blank">Résultats</a></li>
                                     <li><a class="dropdown-item" href="{{ path('app_backend_scrutin_index') }}">Scrutin</a></li>
                                     <li><a class="dropdown-item" href="{{ path('app_backend_candidat_index') }}">Candidats</a></li>
                                 </ul>
