--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -26,6 +26,15 @@ header nav a:hover span {
   background: #fff;
   color: var(--couleur-principale);
 }
+header nav span.nombre {
+  float: right;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+header nav span.nombre span {
+  font-size: 2.7rem;
+  color: darkblue;
+}
 
 main a {
   text-decoration: none;
@@ -233,6 +242,12 @@ main#vote .classement .famille .vote span.pourcentage {
 }
 #electionMain .main-text {
   max-width: 80%;
+}
+
+.resultats {
+  text-align: center;
+  font-weight: bold;
+  font-size: 4.5rem;
 }
 
 @media screen and (max-width: 425px) {
