--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -36,11 +36,11 @@
 
         </div>
         <!-- A supprimer -->
-        <div class="row mt-5 mb-3">
+        <!--<div class="row mt-5 mb-3">
             <div class="col text-end">
                 <a href="{{ path('app_dashboard') }}">Connexion</a>
             </div>
-        </div>
+        </div>-->
     </main>
 {% endblock %}
 {% block meta %}
