--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -1,4 +1,4 @@
-<form class="d-flex recherche" role="search" method="post" action="{{ path('app_recherche') }}">
+<!--<form class="d-flex recherche" role="search" method="post" action="{{ path('app_recherche') }}">
     <div class="input-group">
         <input type="text" class="form-control" name="_recherche" list="listeFamille" placeholder="Rechercher la famille" aria-label="Rechercher la famille" aria-describedby="button-addon2" onchange="submit()">
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
@@ -9,4 +9,4 @@
             <option value="{{ famille.nom }}"></option>
         {% endfor %}
     </datalist>
-</form>
+</form>-->
