--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -57,6 +57,7 @@
                                     <ul class="dropdown-menu">
                                         <li><a class="dropdown-item" href="{{ path('app_admin_user_index') }}">Utilisateur</a></li>
                                         <li><a class="dropdown-item" href="{{ path('app_backend_votant_list') }}">Votant</a></li>
+                                        <li><a class="dropdown-item" href="{{ path('app_backend_election_trucate') }}">Table election</a></li>
                                     </ul>
                                 </li>
                             {% endif %}
