--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -49,6 +49,16 @@
                                     <li><a class="dropdown-item" href="{{ path('app_backend_candidat_index') }}">Candidats</a></li>
                                 </ul>
                             </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Finale
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#" target="_blank">Résultats</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_backend_finale_index') }}">Scrutin</a></li>
+                                    <li><a class="dropdown-item" href="#">Finalistes</a></li>
+                                </ul>
+                            </li>
                             {% if is_granted('ROLE_SUPER_ADMIN') %}
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
