--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -56,7 +56,7 @@
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#" target="_blank">Résultats</a></li>
                                     <li><a class="dropdown-item" href="{{ path('app_backend_finale_index') }}">Scrutin</a></li>
-                                    <li><a class="dropdown-item" href="#">Finalistes</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_backend_finaliste_index') }}">Finalistes</a></li>
                                 </ul>
                             </li>
                             {% if is_granted('ROLE_SUPER_ADMIN') %}
