--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,8 @@
                 <div class="container-fluid" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <a class="navbar-brand" href="{{ absolute_url(path('app_home')) }}">
                         <!--<img src="" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">-->
-                        <span class="h1">SAFA</span>
+                        <span class="h1">
+                        {% block nom %}SAFA{% endblock %}</span>
                     </a>
                     {{ render(url('app_recherche')) }}
                 </div>
