--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -54,7 +54,7 @@
                                     Finale
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#" target="_blank">Résultats</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_dashboard_finale') }}">Résultats</a></li>
                                     <li><a class="dropdown-item" href="{{ path('app_backend_finale_index') }}">Scrutin</a></li>
                                     <li><a class="dropdown-item" href="{{ path('app_backend_finaliste_index') }}">Finalistes</a></li>
                                 </ul>
